force-app/main/default/objects/Case/fields/FS_TotalUSDPropuestaServicio__c.field-meta.xml
<CustomField>
    <fullName>FS_TotalUSDPropuestaServicio__c</fullName>
    <formula>FS_Tarifa_Dias_Hombre__c *  FS_DiasAprobacionPropuestaServicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total USD Propuesta Servicio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>