force-app/main/default/objects/Case/fields/FS_URLEntregaSolucion__c.field-meta.xml
<CustomField>
    <fullName>FS_URLEntregaSolucion__c</fullName>
    <label>URL Entrega Solución</label>
    <type>Url</type>
</CustomField>