force-app/main/default/objects/Case/fields/FS_UstedPudoSolventarTS__c.field-meta.xml
<CustomField>
    <fullName>FS_UstedPudoSolventarTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Usted Pudo Solventar?</label>
    <type>Checkbox</type>
</CustomField>