force-app/main/default/objects/Case/recordTypes/FS_TiempoMateriales.recordType-meta.xml
<RecordType>
    <fullName>FS_TiempoMateriales</fullName>
    <active>true</active>
    <businessProcess>FS_TiempoMateriales</businessProcess>
    <description>Tipo de registro para casos de tiempo y materiales</description>
    <label>Tiempo y Materiales</label>
</RecordType>