force-app/main/default/objects/Case/recordTypes/FS_TiempoMaterialesSprints.recordType-meta.xml
<RecordType>
    <fullName>FS_TiempoMaterialesSprints</fullName>
    <active>true</active>
    <businessProcess>FS_TiempoMaterialesSprints</businessProcess>
    <label>Tiempo y Materiales - Con Sprints</label>
</RecordType>