force-app/main/default/objects/Case/validationRules/FS_Campos_Requeridos_PropuestaEconomica.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Campos_Requeridos_PropuestaEconomica</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISBLANK(TEXT(FS_Acepta_Propuesta_Economica__c)),
  NOT(ISBLANK(TEXT(FS_Aplica_Licencia_Recurrente__c))) 
)</errorConditionFormula>
    <errorMessage>el cliente tiene que aprobar la propuesta económica para continuar.</errorMessage>
</ValidationRule>