force-app/main/default/objects/Case/validationRules/FS_FechaCompromisoEntrega.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_FechaCompromisoEntrega</fullName>
    <active>true</active>
    <description>Valida que el campo fecha compromiso entrega sea mayor o igual a la fecha actual</description>
    <errorConditionFormula>AND(
FS_FechaCompromisoEntrega__c  &lt; TODAY(),
ISCHANGED(FS_FechaCompromisoEntrega__c ) 
)</errorConditionFormula>
    <errorMessage>Ingrese una fecha mayor a la fecha actual.</errorMessage>
</ValidationRule>