force-app/main/default/objects/Case/validationRules/FS_PrevenirAbrirCasosTS.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrevenirAbrirCasosTS</fullName>
    <active>true</active>
    <description>Regla que impide reabrir casos cerrados a los agentes de Tesoreria.</description>
    <errorConditionFormula>AND(
    $UserRole.Name = &quot;Agente N1 - Tesoreria&quot;,
    ISPICKVAL(PRIORVALUE(Status), &quot;Cerrado&quot;),
    NOT(ISPICKVAL(Status, &quot;Cerrado&quot;))
)</errorConditionFormula>
    <errorMessage>No tienes permiso para reabrir casos cerrados. Contacta al administrador.</errorMessage>
</ValidationRule>