force-app/main/default/objects/Case/validationRules/FS_PrevenirCambioProyecto.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrevenirCambioProyecto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
CreatedBy.Profile.Name = &apos;Customer Community User&apos;,
CreatedBy.Profile.Name = &apos;Customer Community Plus User&apos;
),
RecordType.DeveloperName = &apos;FS_Requerimiento&apos;,
OR(
$Profile.Name == &apos;PM-PS&apos;,
$Profile.Name == &apos;Usuario Fisa&apos;
),
OR(
AND(
ISCHANGED(FS_Buscar_Proyecto__c),
NOT(ISBLANK(FS_Buscar_Proyecto__c)) 
),
AND(
ISCHANGED(FS_Buscar_Proyecto2__c),
NOT(ISBLANK(FS_Buscar_Proyecto2__c))
),
AND(
ISCHANGED(FS_Buscar_Proyecto3__c),
NOT(ISBLANK(FS_Buscar_Proyecto3__c))
),
AND(
ISCHANGED(FS_Buscar_Proyecto4__c),
NOT(ISBLANK(FS_Buscar_Proyecto4__c))
) 
),
OR(
TEXT(Status) = &apos;Estimación Macro&apos;,
TEXT(Status) = &apos;Documento de Especificación Funcional&apos;,
TEXT(Status) = &apos;En Propuesta Económica&apos;,
TEXT(Status) = &apos;En Planificación&apos;,
TEXT(Status) = &apos;En Desarrollo&apos;,
TEXT(Status) = &apos;Validación de Respuesta (Cliente)&apos;,
TEXT(Status) = &apos;En Revisión Entregado&apos;,
TEXT(Status) = &apos;Certificado&apos;,
TEXT(Status) = &apos;En Revisión Certificado&apos;,
TEXT(Status) = &apos;En Producción&apos;,
TEXT(Status) = &apos;En Revisión en Producción&apos;,
TEXT(Status) = &apos;Pendiente de Respuesta CSAT&apos;,
TEXT(Status) = &apos;Cerrado&apos;,
TEXT(Status) = &apos;Dado de Baja&apos;
)
)</errorConditionFormula>
    <errorMessage>No puedes cambiar el proyecto en el estado actual.</errorMessage>
</ValidationRule>