force-app/main/default/objects/Case/validationRules/Fs_PrevenirModificacionTipoRequerimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Fs_PrevenirModificacionTipoRequerimiento</fullName>
    <active>true</active>
    <description>No se permite modificar el valor del campo después de haber sido seleccionado.</description>
    <errorConditionFormula>AND(
ISCHANGED(FS_TipoRequerimiento__c),
NOT(ISBLANK(PRIORVALUE(FS_TipoRequerimiento__c))),
OR($Profile.Name  &lt;&gt; &apos;Administrador del sistema&apos;,
$Profile.Name  &lt;&gt; &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>No se permite modificar el valor del campo después de haber sido seleccionado.</errorMessage>
</ValidationRule>