force-app/main/default/objects/Case/validationRules/FS_PrevenirModificarCamposCasoCare.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrevenirModificarCamposCasoCare</fullName>
    <active>true</active>
    <description>Regla de valida que un usuario PM-PS no puede editar ciertos campos del caso en Customer Care.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
CreatedBy.Profile.Name = &apos;Customer Community User&apos;,
CreatedBy.Profile.Name = &apos;Customer Community Plus User&apos;
),
OR(
RecordType.DeveloperName = &apos;FS_Consulta&apos;,
RecordType.DeveloperName = &apos;FS_Incidente&apos;,
RecordType.DeveloperName = &apos;FS_Solicitud&apos;				
),				
$Profile.Name == &apos;Servicio al Cliente&apos;,
OR(
ISCHANGED(Subject),
ISCHANGED(FS_OrigenCaso__c),
ISCHANGED(Priority),
ISBLANK(Contact.Id),
ISCHANGED(ContactId),
ISCHANGED(FS_DescripcionCliente__c)
)
)</errorConditionFormula>
    <errorMessage>Privilegios insuficientes, no puede editar campos del caso ingresados por el cliente o el sistema.</errorMessage>
</ValidationRule>