force-app/main/default/objects/Case/validationRules/FS_PrevenirModificarCasoOwnerTS.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrevenirModificarCasoOwnerTS</fullName>
    <active>true</active>
    <description>Regla que evita que usuarios de Tesorería modifiquen los casos si no son propietarios del registro.</description>
    <errorConditionFormula>AND(
    $UserRole.Name = &quot;Agente N1 - Tesoreria&quot;,
    $User.Id &lt;&gt; OwnerId,
    ISPICKVAL(Status, &quot;Nuevo&quot;) = FALSE,
    ISPICKVAL(FS_SubEstado__c, &quot;Apertura de caso&quot;) = FALSE
)</errorConditionFormula>
    <errorMessage>Privilegios insuficientes, no puedes modificar un registro del que no eres propietario.</errorMessage>
</ValidationRule>