force-app/main/default/objects/Case/validationRules/FS_PrevenirModificarCasosCerradosTS.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_PrevenirModificarCasosCerradosTS</fullName>
    <active>true</active>
    <description>Regla que impide modificar casos cerrados a agentes.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(Status, &quot;Cerrado&quot;),
    FS_esTesoreria__c = TRUE,
    $UserRole.Name = &quot;Agente N1 - Tesoreria&quot;
)</errorConditionFormula>
    <errorMessage>No tienes permisos para modificar casos cerrados. Contacte al administrador.</errorMessage>
</ValidationRule>