force-app/main/default/objects/Case/validationRules/FS_Validacion_Ingresar_Fecha_Compromiso.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Validacion_Ingresar_Fecha_Compromiso</fullName>
    <active>true</active>
    <description>Regla para completar el campo Fecha Compromiso Entrega.</description>
    <errorConditionFormula>OR(
AND(			
RecordType.DeveloperName = &apos;FS_Consulta&apos;, 
ISPICKVAL(FS_PudeSolventarPregunta__c, &apos;Si&apos;),
ISBLANK(FS_FechaCompromisoEntrega__c) 
),
AND(
RecordType.DeveloperName = &apos;FS_Incidente&apos;,
ISPICKVAL(FS_SubEstado__c, &apos;Desarrollo Incidente Puntual&apos;),
ISPICKVAL(FS_TipoIncidente__c, &apos;Puntual&apos;),
FS_RequiereInformacionAdicional__c = false,
ISBLANK(FS_FechaCompromisoEntrega__c)
),
AND(
RecordType.DeveloperName = &apos;FS_Incidente&apos;,
ISPICKVAL(FS_SubEstado__c, &apos;Aprobación Plan de Pruebas&apos;),
ISPICKVAL(FS_TipoIncidente__c, &apos;Definitivo&apos;),
FS_EnviarAprobacionPlanPruebas__c = true,
ISBLANK(FS_FechaCompromisoEntrega__c)
)				
)</errorConditionFormula>
    <errorDisplayField>FS_FechaCompromisoEntrega__c</errorDisplayField>
    <errorMessage>Debe completar el campo Fecha Compromiso Entrega.</errorMessage>
</ValidationRule>