force-app/main/default/objects/Case/validationRules/FS_ValidacionAprobacionAnalisisP.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionAprobacionAnalisisP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(FS_AceptaAnalisisPrevio__c, &apos;Si&apos;),
  ISCHANGED(FS_DiasAprobacionAnalisisPrevio__c),
  $Profile.Name  &lt;&gt; &apos;Administrador del sistema&apos;
)</errorConditionFormula>
    <errorMessage>No puede modificar los días de aprobación del análisis previo si ya fueron aprobados.</errorMessage>
</ValidationRule>