force-app/main/default/objects/Case/validationRules/FS_ValidacionCamposAnalisisTesoreriaInc.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionCamposAnalisisTesoreriaInc</fullName>
    <active>true</active>
    <description>Permite avanzar de estado cuando el caso esta en Nuevo, evitando la obligatoriedad de los campos Proyecto y tipo de incidente.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    FS_esTesoreria__c = TRUE,
    FS_NombreTipoRegistro__c = &apos;Incidente&apos;,
    ISPICKVAL(PRIORVALUE( Status), &quot;Análisis Previo&quot;),
    ISPICKVAL(PRIORVALUE( FS_SubEstado__c ), &quot;Análisis N1&quot;),
    NOT(ISPICKVAL( Status , &quot;En Espera de Respuesta del Cliente&quot;)),
    OR(
        ISPICKVAL(FS_Proyecto__c, &quot;&quot;),
        ISPICKVAL( FS_TipoIncidente__c, &quot;&quot; )
    )
)</errorConditionFormula>
    <errorMessage>Para continuar debe completar los campos Proyecto y Tipo de Incidente cuando el caso se encuentra en Análisis Previo / Análisis N1.</errorMessage>
</ValidationRule>