force-app/main/default/objects/Case/validationRules/FS_ValidacionFechaCompromisoConsulta.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionFechaCompromisoConsulta</fullName>
    <active>true</active>
    <description>Regla para validar cambios ingreso de fecha en el campo: Fecha Compromiso Entrega.</description>
    <errorConditionFormula>AND(
ISCHANGED(FS_FechaCompromisoEntrega__c),
OR(
AND(
OR(
ISBLANK(PRIORVALUE(FS_FechaCompromisoEntrega__c)), 
ISNULL(PRIORVALUE(FS_FechaCompromisoEntrega__c)) 
),
FS_NombreTipoRegistro__c = &apos;Consulta&apos;,
NOT(ISPICKVAL(FS_PudeSolventarPregunta__c, &apos;Si&apos;))
),
AND(
FS_NombreTipoRegistro__c = &apos;Consulta&apos;,
OR(
ISPICKVAL(Status, &apos;Validación de Respuesta (Cliente)&apos;),
ISPICKVAL(Status, &apos;Pendiente de Respuesta CSAT&apos;)			
)    
)
),
FS_esTesoreria__c = false
)</errorConditionFormula>
    <errorDisplayField>FS_FechaCompromisoEntrega__c</errorDisplayField>
    <errorMessage>No puede modificar este campo.</errorMessage>
</ValidationRule>