force-app/main/default/objects/Case/validationRules/FS_ValidacionSolucionCortoPlazo.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_ValidacionSolucionCortoPlazo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!ISNEW(),
ISCHANGED(FS_SolucionCortoPlazo__c),
ISCHANGED(FS_RequiereInformacionAdicional__c)
)</errorConditionFormula>
    <errorDisplayField>FS_SolucionCortoPlazo__c</errorDisplayField>
    <errorMessage>No puede seleccionar esta campo todavía.</errorMessage>
</ValidationRule>