force-app/main/default/objects/Case/listViews/FS_AtencionN1Tesoreria_Case.listView-meta.xml
<ListView>
    <fullName>FS_AtencionN1Tesoreria_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Atención N1 - Tesoreria</label>
    <queue>FS_AtencionN1Tesoreria</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>