force-app/main/default/objects/Case/listViews/FS_TesoreriaCasosAbiertos.listView-meta.xml
<ListView>
    <fullName>FS_TesoreriaCasosAbiertos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>FS_NombreTipoRegistro__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>FS_SubEstado__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_esTesoreria__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Cerrado,Dado de Baja</value>
    </filters>
    <label>Tesoreria Casos Abiertos</label>
</ListView>